# com-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  migrate_to_pch.ps1  vcpkg.json
.github/: copilot-instructions.md  fabricbot.json
devdoc/: com_wrapper_requirements.md
inc/com_wrapper/: com_wrapper.h
tests/: CMakeLists.txt
tests/com_wrapper_int/: CMakeLists.txt  com_wrapper_int.c  custom_alloc_helpers.c  custom_alloc_helpers.h  test_interface.h  test_interface_i.c  test_object.h  test_object_custom_alloc_wrapper.c  test_object_custom_alloc_wrapper.h
tests/com_wrapper_ut/: CMakeLists.txt  com_wrapper_ut.c  com_wrapper_ut_pch.h  real_test_object.c  real_test_object.h  real_test_object_renames.h  test_interface.h  test_interface.idl  test_interface_i.c  test_object.c  test_object.h  test_object_2.c  test_object_2.h  test_object_2_wrapper.c  test_object_2_wrapper.h  test_object_custom_alloc_wrapper.c  test_object_wrapper.c  test_object_wrapper.h
tests/mocking/: com_wrapper_mock_begin.h  com_wrapper_mock_end.h
triplets/: x64-windows-static-comwrapper-asan.cmake  x64-windows-static-comwrapper.cmake
